<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/aboutAppTitleTextView"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creatorTextView"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/aboutCreator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppTitleTextView"
        tools:text="Crée par : Anthony GUIOCK" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="238dp"
        android:layout_height="94dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/creatorMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creatorTextView"
        tools:text="anthony.guiock@gmail.com" />

    <TextView
        android:id="@+id/versionNumberTextView"
        android:layout_width="106dp"
        android:layout_height="58dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        tools:text="V 1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>